<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.blloc.notificationsmanager.ui.viewmodel.NotificationsViewModel.ScreenState" />

        <variable
            name="screenState"
            type="ScreenState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        tools:context=".ui.MainActivity">

        <Button
            android:id="@+id/btn_go_to_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_grand_permissions"
            app:isVisible="@{screenState == ScreenState.PERMISSIONS_NOT_GRANTED}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_permission_required"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_permission_required"
            app:isVisible="@{screenState == ScreenState.PERMISSIONS_NOT_GRANTED}"
            app:layout_constraintBottom_toTopOf="@id/btn_go_to_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty_state"
            app:isVisible="@{screenState == ScreenState.EMPTY_STATE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notifications"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isVisible="@{screenState == ScreenState.ALL_NOTIFICATIONS_STATE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_filters" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_active_notifications"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isVisible="@{screenState == ScreenState.ACTIVE_NOTIFICATIONS_STATE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_filters" />

        <Button
            android:id="@+id/btn_create_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_test_notification"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isVisible="@{screenState != ScreenState.PERMISSIONS_NOT_GRANTED}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/text_filter_all_notifications" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/text_filter_active_notifications" />
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>